--- a/README.org
+++ b/README.org
@@ -388,14 +388,15 @@ In Dired (see mark [[https://www.gnu.org/software/emacs/manual/html_node/emacs/M
 
 ** ESS
 
-| Key name     | Operation                                                  |
-|--------------+------------------------------------------------------------|
-| ~C-c C-r~    | Move cursor to previous command + at the top of the window |
-| ~C-c C-o~    | Delete everything from last command to current prompt      |
-| ~C-M-\~      | Indent region (using formatR)                              |
-| ~C-x C-i~    | Indent buffer (using rfmt)                                 |
-| ~C-return~   | Add a fenced R code block (in RMarkdown file)              |
-| ~C-S-return~ | Add inline R code (in RMarkdown file)                      |
+| Key name      | Operation                                                  |
+|---------------+------------------------------------------------------------|
+| ~C-c C-r~     | Move cursor to previous command + at the top of the window |
+| ~C-c C-o~     | Delete everything from last command to current prompt      |
+| ~C-c C-e C-w~ | Readjust width to the window width                         |
+| ~C-M-\~       | Indent region (using formatR)                              |
+| ~C-x C-i~     | Indent buffer (using rfmt)                                 |
+| ~C-return~    | Add a fenced R code block (in RMarkdown file)              |
+| ~C-S-return~  | Add inline R code (in RMarkdown file)                      |
 
 *Special:* Ask for password in R and hide it while typing:
 
