--- a/init.org
+++ b/init.org
@@ -910,6 +910,7 @@ file save). We also bound Magit to ~F8~, and integrate Git-flow to
 Magit (=magit-gitflow=, started with ~C-f~ from within Magit):
 
 #+BEGIN_SRC emacs-lisp
+  (load-library "magit-repository-directories")
   (shell-command "git config --global status.showUntrackedFiles all") ; List files in folders
   (global-set-key [(f8)] 'magit-status)
   ;; (setq vc-handled-backends (delq 'Git vc-handled-backends))
@@ -920,6 +921,21 @@ Magit (=magit-gitflow=, started with ~C-f~ from within Magit):
    magit-refs-show-commit-count 'all)
   (with-eval-after-load 'magit
     (load-library "magit-ls-files")
+
+    ;; (setq magit-repolist-columns
+    ;;       '(("Name" 25 magit-repolist-column-ident nil)
+    ;;         ("Version" 25 magit-repolist-column-version nil)
+    ;;         ("D" 1 magit-repolist-column-dirty nil)
+    ;;         ("B<U" 3 magit-repolist-column-unpulled-from-upstream
+    ;;          ((:right-align t)))
+    ;;         ("B>U" 3 magit-repolist-column-unpushed-to-upstream
+    ;;          ((:right-align t)))
+    ;;         ("Path" 99 magit-repolist-column-path nil)))
+          
+    ;; (setcdr (cdr magit-repolist-columns)
+    ;;         (cons '("D" 1 magit-repolist-column-dirty nil)
+    ;;               (cddr magit-repolist-columns)))
+    
     (define-key magit-mode-map (kbd "K") 'magit-ls-files)
     (add-hook 'after-save-hook 'magit-after-save-refresh-status))
   (add-hook 'magit-mode-hook 'turn-on-magit-gitflow)
