--- a/README.org
+++ b/README.org
@@ -266,11 +266,12 @@ status.showUntrackedFiles normal=)
 | ~C-x r b~ | Jump to a bookmark                                           |
 | ~C-x r l~ | List bookmarks                                               |
 
-| Key name | Operation                                        |
-|----------+--------------------------------------------------|
-| ~C-f~    | In IDO mode, fall back to normal prompt          |
-| ~TAB~    | Complete anything                                |
-| or       | Fold/unfold functions/regions (if code indented) |
+| Key name  | Operation                                          |
+|-----------+----------------------------------------------------|
+| ~C-M-j~   | In Ivy mode, do it now! (e.g. create new file)     |
+| ~C-c C-o~ | =ivy-occur=: save current search into a new buffer |
+| ~TAB~     | Complete anything                                  |
+| or        | Fold/unfold functions/regions (if code indented)   |
 
 | Key name              | Operation                                |
 |-----------------------+------------------------------------------|
@@ -281,14 +282,13 @@ status.showUntrackedFiles normal=)
 
 ** File manager
 
-When opening a file with IDO (~C-x C-f~):
+When opening a file with Ivy (~C-x C-f~):
 
 | Key name | Operation                     |
 |----------+-------------------------------|
 | ~//~     | Go to the root directory      |
-| =~/=     | Go to the home directory      |
-| ~C-d~    | Enter Dired in this directory |
-| ~$~      | Go to a bookmark              |
+| =~=      | Go to the home directory      |
+| ~ENTER~  | Enter Dired in this directory |
 
 In Dired (see mark [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Marks-vs-Flags.html][here]], and operations on file [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Operating-on-Files.html#Operating-on-Files][here]]) or ibuffer:
 
